--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,14 +1,16 @@
-.infoCardHeadline {
-  font-family: serif;
-  font-size: 2.25rem;
-  font-style: bold;
-  font-weight: normal;
-  color: black;
-  border: 2px solid black;
-  padding: 24px;
+.infoCardContainer {
   margin: 0 auto;
   max-width: 1260px;
   padding: 0;
+}
+
+.infoCardHeadline {
+  font-family: serif;
+  font-size: 2.25rem;
+  font-weight: bold;
+  color: black;
+  border: 2px solid black;
+  padding: 24px;
 }
 
 .infoCardCallActionContainer :global(.vtex-button) {
