--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -9,7 +9,7 @@
   font-size: 2.25rem;
   font-weight: bold;
   color: black;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 24px;
 }
 
